# blueprint

./: README.md  pyproject.toml
.blueprint/: config.json
definition/: overview.md
definition/context/: audience.md  constraints.md  origin.md  problem.md
definition/decisions/: 001-project-definition-pack.md  002-initializer-owns-structure.md  003-first-skill-kickstarts-north-star.md  004-initializer-installs-skills.md  README.md
definition/shape/: non-goals.md  principles.md  purpose.md  scope.md
definition/unresolved/: possible-directions.md  questions.md  tensions.md
skills/blueprint-kickstart-idea/: SKILL.md
skills/blueprint-kickstart-idea/agents/: openai.yaml
skills/blueprint-kickstart-idea/assets/templates/: audience.md  non-goals.md  origin.md  overview.md  problem.md  purpose.md  questions.md  scope.md
src/blueprint_cli/: __init__.py
src/blueprint_cli/templates/scaffold/definition/: overview.md
src/blueprint_cli/templates/scaffold/definition/context/: audience.md  constraints.md  origin.md  problem.md
src/blueprint_cli/templates/scaffold/definition/decisions/: README.md
src/blueprint_cli/templates/scaffold/definition/shape/: non-goals.md  principles.md  purpose.md  scope.md
src/blueprint_cli/templates/scaffold/definition/unresolved/: possible-directions.md  questions.md  tensions.md
