[project]
name = "blueprint-cli"
version = "0.1.0"
description = "Initialize Blueprint project definition workspaces."
requires-python = ">=3.11"

[project.scripts]
blueprint = "blueprint_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/blueprint_cli/templates/scaffold" = "blueprint_cli/templates/scaffold"
"skills" = "blueprint_cli/skills"
